--- a/StudentApp/StudentApp/Base.lproj/Main.storyboard
+++ b/StudentApp/StudentApp/Base.lproj/Main.storyboard
@@ -217,27 +217,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hEO-d9-fkc" userLabel="ContentView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hEO-d9-fkc" userLabel="QuizView">
                                 <rect key="frame" x="24" y="76" width="327" height="670"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="titleCard" text="Title Card" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nte-Qk-bwX">
-                                        <rect key="frame" x="101" y="25" width="124" height="36"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Wd-xV-kD6">
-                                        <rect key="frame" x="8" y="614" width="311" height="48"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
-                                        <state key="normal" title="Submit Answer">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                    </button>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="hXF-Fx-evJ">
+                                        <rect key="frame" x="16" y="24" width="295" height="630"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="titleCard" text="Title Card" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nte-Qk-bwX">
+                                                <rect key="frame" x="0.0" y="0.0" width="295" height="36"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qPl-DM-Kcz">
+                                                <rect key="frame" x="0.0" y="44" width="295" height="519"/>
+                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <connections>
+                                                    <segue destination="jtv-tU-YUo" kind="embed" id="0YD-Sp-RyN"/>
+                                                </connections>
+                                            </containerView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Wd-xV-kD6">
+                                                <rect key="frame" x="0.0" y="571" width="295" height="59"/>
+                                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="3Wd-xV-kD6" secondAttribute="height" multiplier="5:1" id="Kfr-X9-gYB"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                <state key="normal" title="Submit Answer">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="3Wd-xV-kD6" secondAttribute="trailing" id="0Qw-VO-hCL"/>
+                                            <constraint firstAttribute="bottom" secondItem="3Wd-xV-kD6" secondAttribute="bottom" id="DkZ-fs-hmb"/>
+                                            <constraint firstAttribute="trailing" secondItem="Nte-Qk-bwX" secondAttribute="trailing" id="DwQ-I7-6CI"/>
+                                            <constraint firstItem="qPl-DM-Kcz" firstAttribute="leading" secondItem="hXF-Fx-evJ" secondAttribute="leading" id="Mzc-am-LQU"/>
+                                            <constraint firstItem="3Wd-xV-kD6" firstAttribute="leading" secondItem="hXF-Fx-evJ" secondAttribute="leading" id="Yae-G3-udQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="qPl-DM-Kcz" secondAttribute="trailing" id="fYw-p2-DNA"/>
+                                            <constraint firstItem="Nte-Qk-bwX" firstAttribute="top" secondItem="hXF-Fx-evJ" secondAttribute="top" id="lGX-oq-Qh5"/>
+                                            <constraint firstItem="Nte-Qk-bwX" firstAttribute="leading" secondItem="hXF-Fx-evJ" secondAttribute="leading" id="y6E-Ab-vhW"/>
+                                        </constraints>
+                                    </stackView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="hXF-Fx-evJ" firstAttribute="leading" secondItem="hEO-d9-fkc" secondAttribute="leading" constant="16" id="S26-VR-1Da"/>
+                                    <constraint firstAttribute="trailing" secondItem="hXF-Fx-evJ" secondAttribute="trailing" constant="16" id="YgN-7a-U9x"/>
+                                    <constraint firstAttribute="bottom" secondItem="hXF-Fx-evJ" secondAttribute="bottom" constant="16" id="pQ1-MJ-qP9"/>
+                                    <constraint firstItem="hXF-Fx-evJ" firstAttribute="top" secondItem="hEO-d9-fkc" secondAttribute="top" constant="24" id="tII-Zc-BJE"/>
+                                </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.058823529411764705" green="0.039215686274509803" blue="0.019607843137254902" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="displayP3"/>
@@ -252,7 +281,8 @@
                     </view>
                     <value key="contentSizeForViewInPopover" type="size" width="100" height="200"/>
                     <connections>
-                        <outlet property="quizContentView" destination="hEO-d9-fkc" id="J47-Dy-2Vj"/>
+                        <outlet property="containerView" destination="qPl-DM-Kcz" id="edX-Wg-Zd7"/>
+                        <outlet property="quizView" destination="hEO-d9-fkc" id="J47-Dy-2Vj"/>
                         <outlet property="submitButton" destination="3Wd-xV-kD6" id="enN-ly-4vX"/>
                         <outlet property="titleCard" destination="Nte-Qk-bwX" id="Sam-BI-gXe"/>
                     </connections>
@@ -338,6 +368,19 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SLP-g0-rao" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1207" y="820"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="nSI-nq-UkH">
+            <objects>
+                <viewController id="jtv-tU-YUo" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="PmO-Sd-wag">
+                        <rect key="frame" x="0.0" y="0.0" width="295" height="519"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tDY-96-5v7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
         </scene>
     </scenes>
     <resources>
