--- a/TeacherApp/TeacherApp/Base.lproj/Main.storyboard
+++ b/TeacherApp/TeacherApp/Base.lproj/Main.storyboard
@@ -346,6 +346,7 @@
                         <segue destination="zqr-cz-1KN" kind="relationship" relationship="viewControllers" id="6IS-Lf-U7e"/>
                         <segue destination="rYM-js-i8T" kind="relationship" relationship="viewControllers" id="Ey0-jb-oer"/>
                         <segue destination="GOM-3i-b36" kind="relationship" relationship="viewControllers" id="tIC-cX-veR"/>
+                        <segue destination="v86-YL-qEH" kind="relationship" relationship="viewControllers" id="Dff-LF-tHY"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qo9-oo-Mdm" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -451,6 +452,62 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WqZ-J5-Wwe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="854" y="834"/>
+        </scene>
+        <!--Settings-->
+        <scene sceneID="g7u-Zo-veI">
+            <objects>
+                <viewController id="v86-YL-qEH" userLabel="Settings" customClass="SettingsVC" customModule="TeacherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cDY-cm-TZN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XNc-OL-iaT" userLabel="Connected Students">
+                                <rect key="frame" x="5" y="35" width="365" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="FzL-Cd-K36"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="yBP-Ej-a72">
+                                <rect key="frame" x="5" y="125" width="365" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Display Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NnN-w5-oND">
+                                        <rect key="frame" x="0.0" y="0.0" width="105" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="105" id="QCN-0M-lXJ"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hHV-f3-mwD" userLabel="NameField">
+                                        <rect key="frame" x="117" y="0.0" width="248" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="XNc-OL-iaT" firstAttribute="top" secondItem="9ED-HA-4Rt" secondAttribute="top" constant="15" id="CVc-kG-G5l"/>
+                            <constraint firstItem="9ED-HA-4Rt" firstAttribute="trailing" secondItem="yBP-Ej-a72" secondAttribute="trailing" constant="5" id="ElJ-Mb-JX5"/>
+                            <constraint firstItem="yBP-Ej-a72" firstAttribute="top" secondItem="XNc-OL-iaT" secondAttribute="bottom" constant="15" id="GHX-MV-sVy"/>
+                            <constraint firstItem="yBP-Ej-a72" firstAttribute="leading" secondItem="9ED-HA-4Rt" secondAttribute="leading" constant="5" id="Nly-fV-sfS"/>
+                            <constraint firstItem="9ED-HA-4Rt" firstAttribute="trailing" secondItem="XNc-OL-iaT" secondAttribute="trailing" constant="5" id="Qhm-Ih-dwU"/>
+                            <constraint firstItem="9ED-HA-4Rt" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="yBP-Ej-a72" secondAttribute="bottom" constant="5" id="cMt-EO-J1e"/>
+                            <constraint firstItem="XNc-OL-iaT" firstAttribute="leading" secondItem="9ED-HA-4Rt" secondAttribute="leading" constant="5" id="db6-yJ-kfX"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9ED-HA-4Rt"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="kNW-U8-trN"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Di-i1-ikQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-370" y="834"/>
         </scene>
         <!--QuizQuestions-->
         <scene sceneID="UpL-hh-H9x">
